--- a/pub/asset/app.css
+++ b/pub/asset/app.css
@@ -11,7 +11,7 @@ p:not(:last-child) { margin-bottom: 12px; }
 ul, ol { list-style: none; }
 h1, h2, h3, h4, h5, h6 { font-weight: 500; margin-bottom: 6px; }
 
-.wrap { width: 85%; margin: 0 auto; }
+.wrap { width: 95%; margin: 0 auto; }
 .sep { display: block; content: ""; margin: 12px 0; }
 
 .head { position: relative; font-size: 20px; border-bottom: 1px solid #111; padding: 10px 0; }
@@ -39,19 +39,26 @@ h1, h2, h3, h4, h5, h6 { font-weight: 500; margin-bottom: 6px; }
 /*.docs > h3 { margin-bottom: 10px; }*/
     /*.docs > h3:not(:first-child) { margin-top: 20px; }*/
 
-/* override - prism */
+/*** prism @override ***/
 :not(pre) > code[class*="language-"], pre[class*="language-"] {background: #f6f6f6 !important; padding: 9px 12px !important; border: 1px solid #e9e9e9; border-radius: 4px}
 :not(pre) > code[class*="language-"] *, pre[class*="language-"] * {font-size: 12px !important; font-weight: normal !important; color: #333 !important; padding: 0;}
-.token.delimiter {color: #e33 !important}
-.token.operator {background: none !important}
-.token.keyword {color: #a28 !important}
-.token.string {color: #777 !important}
-.token.number {color: #c39 !important}
-.token.comment {color: #a6a6a6 !important}
-.token.class-name {color: #07a !important;}
-.token.function {color: #07a !important}
-.token.method {color: #74b !important}
-.token.package {color: #333 !important;}
-.token.constant, .token.boolean, .token.type-hint {color: #07a !important}
-.token.operator, .token.punctuation, .token.variable {color: #333 !important}
-/*.token.property {color: inherit !important}*/
+    .token.delimiter {color: #e33 !important}
+    .token.operator {background: none !important}
+    .token.keyword {color: #a28 !important}
+    .token.string {color: #777 !important}
+    .token.number {color: #c39 !important}
+    .token.comment {color: #a6a6a6 !important}
+    .token.class-name {color: #07a !important;}
+    .token.function {color: #07a !important}
+    .token.method {color: #74b !important}
+    .token.package {color: #333 !important;}
+    .token.constant, .token.boolean, .token.type-hint {color: #07a !important}
+    .token.operator, .token.punctuation, .token.variable {color: #333 !important}
+    /*.token.property {color: inherit !important}*/
+
+/*** mobile ***/
+@media (max-width: 767px) {
+    .head { font-size: 18px; }
+    .body .side { width: 23% }
+    .body .main { width: 75%; word-break: break-word; }
+}
